syntax = "proto3";

package hello;

option go_package = "./hello"; // Menentukan path Go package

service Greeter {
  rpc SayHelloBroh (HelloRequest) returns (HelloResponse);
}

message Address {
  string street = 1; // Screet
  string city = 2;   // City
  string country = 3; // Country
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  repeated Address addresses = 3; // Implemnt struct Address
}

message HelloResponse {
  string name = 1;
  int32 age = 2;
  repeated Address addresses = 3; // Implemnt struct Address
}
