syntax = "proto3";


package cfp.api.pikatan.v2;
option go_package = "../v2"; // Path Go package

import "google/api/annotations.proto";   
import "cfp/api/pikatan/v2/hello.proto";

service Greeter {
  // gRPC method biasa
  rpc SayHelloBroh (HelloRequest) returns (HelloResponse);

  // gRPC-Gateway dengan HTTP binding
  rpc SayHelloGrpcGateway (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/hello" // Endpoint HTTP
      body: "*"         // Semua body diteruskan ke HelloRequest
    };
  }
}
